@@ -33,9 +33,11 @@ protected:
 	Framebuffer& fb;
 	PTY& pty;
 	Options const& options;
+	bool alternateCharset;
 
 private:
 	void InputChar(const char c);
+	virtual void InputAlternateChar(const char c);
 	void InputEscapeChar(const char c);
 	char ConvertByteInput(const char c);
 
