@@ -5,6 +5,8 @@ Version 0.4.1
   - Makefile changed to detect libraries and ease configuation
   - Commands can now be started in the terminal initializtiaon from the 
     commandline.
+  - An alias to vim was changed to make it able to use <C-PgUp> and <C-PgDown>.
+  - Added special charset for curses.
 
 Version 0.4.0
 -------------
